# proxy-twister

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  example_config.json
.github/instructions/: CODING_GUIDELINES.instructions.md
src/: main.rs  server.rs
src/config/: mod.rs  watcher.rs
src/protocols/: http.rs  socks.rs
src/utils/: mod.rs
tests/: test_advanced_features.rs  test_direct_routing.rs  test_failure_scenarios.rs  test_http_proxy.rs  test_integration.rs  test_socks5_proxy.rs
tests/it_support/: containerized_servers.rs  docker_support.rs  mod.rs  proxy_twister_helper.rs  test_helpers.rs
