[package]
name = "proxy-twister"
version = "1.1.4"
edition = "2024"
authors = ["Mikhail Lesin"]
description = "A flexible HTTP proxy switcher that routes traffic through different proxies (SOCKS5 or HTTP) based on target host patterns."
license = "Apache-2.0"
repository = "https://github.com/mlesin/proxy-twister"
readme = "README.md"
homepage = "https://github.com/mlesin/proxy-twister"
documentation = "https://docs.rs/proxy-twister"
keywords = ["proxy", "http", "socks5", "switcher", "networking"]
categories = ["network-programming", "command-line-utilities"]
# Exclude files not needed in the crate package
exclude = ["target/*", "example_config.json", "config.json"]

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
json5 = "0.4"
tokio = { version = "1", features = ["full"] }
notify = "8.0.0"
tokio-util = "0.7.14"
